ferric/tests/ui/semantic_err_03.stderr
error: undefined query variable `grass_wet2`
  --> tests/ui/semantic_err_03.rs:28:11
   |
28 |     query grass_wet2;
   |           ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `grass`
  --> tests/ui/semantic_err_03.rs:32:18
   |
32 |     let _model = grass::Model { grass_wet: true };
   |                  ^^^^^ use of undeclared crate or module `grass`
